Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19551

Return error when setting default quota on nodemap with offsets

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.17.0
    • Lustre 2.17.0
    • 3
    • 9223372036854775807

      When a client is associated with a nodemap that has offsets defined, the nodemap maps the PROJID and UID for ID 0 to the offset (depending on the offset, it may also be squashed). A root user of such a nodemap can attempt to set the default quota (ID 0) but it is actually offset. Therefore, a command, e.g., "lfs setquota -P -b 10G -B 10G -i 100K -I 100K /mnt/lustre" succeeds but it does not set the default quota (ID 0) (since the PROJID is offset to a non-zero value). 

      The expected behavior should be that only root users of privileged nodemaps (admin=1,trusted=1, and no offsets) should be able to set the default quota. Otherwise, return a corresponding errorcode.

            mvef Marc Vef
            mvef Marc Vef
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: